<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dogs"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dogs" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_icon"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/profile" />

</menu>