<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cp3407_assignment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_doggoInformation"
            app:destination="@id/doggoInformation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dogs"
        android:name="com.example.cp3407_assignment.ui.dogs.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dogs" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.cp3407_assignment.ui.messages.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.cp3407_assignment.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cp3407_assignment.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/doggoInformation"
        android:name="com.example.cp3407_assignment.ui.home.DoggoInformation"
        android:label="fragment_doggo_information"
        tools:layout="@layout/fragment_doggo_information" />
</navigation>