<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_upload_cart"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/good_boi_pic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/doggo_name_hire_page"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_view_breed_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/good_boi_breed"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_start_date_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:text="@string/start_date_end_date"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_cost_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cost"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>