<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/change_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/change_email_address"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/enter_new_email_address"
            android:hint="@string/enter_new_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_email_title" />

        <EditText
            android:id="@+id/confirm_new_email"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/re_enter_new_email_address"
            android:hint="@string/re_enter_new_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_email" />

        <Button
            android:id="@+id/change_email_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:layout_marginTop="12dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_new_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>